[package]
name = "kv_server_week1"
version = "0.1.0"
authors = ["taowei <2909683353@qq.com>"]
edition = "2018"
build = "build.rs"

#[lib]
#name = "lib"
#path = "src/lib.rs"


[[bin]]
name = "test"
path = "src/test.rs"

[dependencies]
protobuf = "2.0.2"
futures = "0.1.16"
grpcio = { version = "0.4", default-features = false, features = ["protobuf-codec"] }


[build-dependencies]
protoc-grpcio = "1.0.1"